--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-window": "^1.8.8",
     "axios": "^1.12.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-window": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
