--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   cve-app:
     build:
@@ -12,7 +11,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=8080
-      - DB_PATH=/app/backend/data/cves.db
+      - DB_PATH=/app/data/cves.db
       - NIST_API_URL=https://services.nvd.nist.gov/rest/json/cves/2.0?cpeName=cpe:2.3:o:microsoft:windows_10:1607
     restart: unless-stopped
     healthcheck:
